# devos

./: .editorconfig.bk  COPYING  default.nix  flake.nix  flake.nix~
hosts/: default.nix  up-thinkpad.nix
hosts/thinkpad/: configuration.nix  default.nix  default.nix~  hardware-configuration.nix
modules/personalize/: default.nix  performance-tweaks.nix
modules/personalize/wayland/: default.nix
modules/personalize/xorg/: default.nix  kde.nix  xmonad.hs  xmonad.nix
overlays/: nixFlakes.nix  overrides.nix
profiles/cachix/: hls.nix
profiles/core/: common.nix  default.nix  nixos.nix  starship.toml
profiles/develop/tmux/: default.nix
profiles/develop/zsh/: default.nix
profiles/graphical/: default.nix
profiles/graphical/xmonad/: default.nix
profiles/laptop/: default.nix
profiles/misc/: default.nix  dropbox.nix
profiles/network/: default.nix
profiles/network/networkmanager/: default.nix
profiles/networking/: default.nix
profiles/security/: default.nix
profiles/virt/: default.nix
profiles/wayland/: default.nix
profiles/xorg/: default.nix
shell/: default.nix  devos.nix  flk.sh
shell/bud/: default.nix
tests/: default.nix
up/thinkpad/: configuration.nix  hardware-configuration.nix
users/: .gitattributes
users/modules/: .gitattributes  module-list.nix
users/modules/develop/: default.nix
users/modules/develop/agda/: default.nix
users/modules/develop/haskell/: default.nix
users/modules/develop/haskell/toolchain/: stack.config.yaml
users/modules/develop/holmusk/: default.nix
users/modules/emacs/: default.nix  spacemacs
users/modules/emacs/doom.d/: config.el  init.el  packages.el
users/modules/fonts/: default.nix
users/modules/gsettings/: default.nix
users/modules/holmusk/: .gitattributes  default.nix
users/modules/hyprland/: default.nix  hyprland.conf
users/modules/hyprland/waybar/: config
users/modules/media/: default.nix
users/modules/media/glava/: default.nix
users/modules/media/glava/glava/: rc-graph.glsl
users/modules/media/mopidy/: default.nix
users/modules/media/ncmpcpp/: default.nix
users/modules/mime/: default.nix
users/modules/mopidy/: default.nix  mopidy.conf
users/modules/ncmpcpp/: default.nix
users/modules/others/: default.nix
users/modules/shell/: default.nix
users/modules/shell/bash/: default.nix
users/modules/shell/common/: default.nix
users/modules/shell/tmux/: bindings.conf  default.nix  tmux.conf
users/modules/shell/zsh/: default.nix
users/modules/xmonad/: default.nix
users/modules/xmonad/autorandr/: postswitch
users/modules/xmonad/axarva/: SOURCE  default.nix  xmonad.hs
users/modules/xmonad/axarva/alacritty/: alacritty.yml
users/modules/xmonad/axarva/config/: picom.conf
users/modules/xmonad/axarva/rofi/powermenu/: card_circle_3840.rasi
users/modules/xmonad/basic/: default.nix  xmobarrc  xmonad.hs
users/modules/xmonad/rofi/: default.nix
users/modules/xmonad/simple/: .gitignore  LICENSE  SOURCE  build  build.bk  build.nix  cabal.project  default.nix  flake.nix  hie.yaml  shell.nix  stack.yaml  stack.yaml.bk  xmonad-simple.cabal  xmonad.hs  xmonad.nix
users/modules/xmonad/simple/.hix-flake/: flake.nix
users/modules/xmonad/simple/alacritty/: alacritty.yml
users/modules/xmonad/simple/app/StatusBar/: Bottom.hs  Monitors.hs  Music.hs  StatusBar.hs  Themes.hs
users/modules/xmonad/simple/config/: picom.conf
users/modules/xmonad/simple/lib/: Common.hs  KeyBindings.hs  Layouts.hs  StatusBar.hs
users/modules/xmonad/simple/lib/XMobar/: Bottom.hs  Monitors.hs  Music.hs  Themes.hs
users/modules/xmonad/simple/nix/: hix.nix
users/modules/xmonad/simple/rofi/powermenu/: card_circle_1920.rasi
users/modules/xmonad/simple/xmobar/: xmobar.rc
users/modules/xmonad/simple/xmobar/src/: Monitors.hs  Music.hs  StatusBar.hs  Themes.hs
users/modules/xmonad/simple/xmonad/: Common.hs  KeyBindings.hs  Layouts.hs  xmonad.hs
users/nixos/: #default.nix#  .#default.nix
users/profiles/direnv/: default.nix
users/profiles/thongpv87/: default.nix
users/root/: default.nix
users/thongpv87/: default.nix
(+6 files in other folders)
