cabal-version:       2.4
name:                xmonad-simple
version:             0.1.0.0
license:             ISC
build-type:          Simple

executable xmonad-simple
           main-is:             xmonad.hs
           build-depends:       base
                              , xmonad >= 0.17
                              , xmonad-contrib
                              , xmonad-extras
                              , containers
                              , directory
                              , X11
           default-language:    Haskell2010
           ghc-options:        -Wall
                               -Wincomplete-uni-patterns
                               -Wincomplete-record-updates
                               -Wcompat
                               -Widentities
                               -Wredundant-constraints
                               -Wpartial-fields
                               -fhide-source-paths
           default-extensions:
                               ApplicativeDo
                               BlockArguments
                               DefaultSignatures
                               DeriveFoldable
                               DeriveFunctor
                               DeriveGeneric
                               DeriveTraversable
                               LambdaCase
                               OverloadedStrings
                               TupleSections
                               TypeFamilies
                               TypeApplications
                               TypeSynonymInstances
                               ViewPatterns