cabal-version:       3.4
name:                xmonad-simple
version:             0.1.0.0
license:             ISC
build-type:          Simple

common common
           build-depends:       base
                              , xmonad >= 0.17
                              , xmonad-contrib
                              , xmonad-extras
                              , containers
                              , directory
                              , X11
           ghc-options:        -Wall
                               -Wincomplete-uni-patterns
                               -Wincomplete-record-updates
                               -Wcompat
                               -Widentities
                               -Wredundant-constraints
                               -Wpartial-fields
                               -fhide-source-paths
           default-extensions:
                               ApplicativeDo
                               BlockArguments
                               DefaultSignatures
                               DeriveFoldable
                               DeriveFunctor
                               DeriveGeneric
                               DeriveTraversable
                               LambdaCase
                               OverloadedStrings
                               RecordWildCards
                               TupleSections
                               TypeFamilies
                               TypeApplications
                               TypeSynonymInstances
                               ViewPatterns


library
           import:              common
           hs-source-dirs:      lib
           exposed-modules:     Config
                                KeyBindings
                                Layouts
                                Common

           default-language:    Haskell2010


executable xmonad-simple-exe
           import:              common
           build-depends:       xmonad-simple
           default-language:    Haskell2010
           main-is:             xmonad.hs

-- executable xmonad-testing
--            import:             common
--            default-language:    Haskell2010
--            hs-source-dirs:      .
--            main-is:             xmonad.hs
